--- a/backend/package.json
+++ b/backend/package.json
@@ -7,12 +7,14 @@
     "axios": "^0.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "mongoose": "^5.6.9"
+    "mongoose": "^5.6.9",
+    "socket.io": "^2.2.0"
   },
   "scripts": {
     "dev": "nodemon src/server.js"
   },
   "devDependencies": {
+    "dotenv": "^8.0.0",
     "nodemon": "^1.19.1"
   }
 }
